--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
+    "tailwindcss-animated": "^2.0.0",
     "vite": "^6.3.5"
   }
 }
